test/libhyperion/syntaxTests/viewPureChecker/function_types_fail.hyp
contract C {
    function f() pure public {
        function () external nonpayFun;
        nonpayFun();
    }
    function g() pure public {
        function () external view viewFun;
        viewFun();
    }
    function h() view public {
        function () external nonpayFun;
        nonpayFun();
    }
}
// ----
// TypeError 4888: (52-82): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
